--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require": {
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.5.0",
+        "drupal/address": "^1.6",
         "drupal/admin_toolbar": "^1.26",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
