Add paragraph, field_group, etc.

--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,14 @@
         "drupal-composer/drupal-scaffold": "^2.5.0",
         "drupal/address": "^1.6",
         "drupal/admin_toolbar": "^1.26",
+        "drupal/auto_entitylabel": "^2.1@beta",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
         "drupal/core": "^8.0@stable",
         "drupal/devel": "^2.1",
+        "drupal/field_group": "^1.0",
+        "drupal/paragraphs": "^1.8",
+        "drupal/token": "^1.5",
         "drupal/workbench": "^1.1",
         "drupal/workbench_tabs": "^1.3"
     },
