Configure the acquia details so that we can run 'phing acquia-load-backup'

--- a/.the-build/build.yml
+++ b/.the-build/build.yml
@@ -56,3 +56,9 @@ behat:
 artifact:
   git:
     remote: "towerhealthcm@svn-6061.devcloud.hosting.acquia.com:towerhealthcm.git"
+
+# Configuration for targets/acquia.xml
+acquia:
+  realm: "devcloud"
+  site: "towerhealthcm"
+  env: "dev"
