--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "drupal/core": "^8.0@stable",
         "drupal/devel": "^2.1",
         "drupal/field_group": "^1.0",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/office_hours": "^1.1",
         "drupal/paragraphs": "^1.8",
         "drupal/token": "^1.5",
