--- a/config/sites/default/core.entity_view_display.node.service.default.yml
+++ b/config/sites/default/core.entity_view_display.node.service.default.yml
@@ -14,6 +14,11 @@ targetEntityType: node
 bundle: service
 mode: default
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_area_of_care_ref:
     weight: 102
     label: above
@@ -24,14 +29,14 @@ content:
     region: content
   field_body:
     weight: 101
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
