--- a/config/sites/default/core.entity_view_display.taxonomy_term.condition.default.yml
+++ b/config/sites/default/core.entity_view_display.taxonomy_term.condition.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.condition.field_alternative_names
     - field.field.taxonomy_term.condition.field_medical_specialties_ref
     - taxonomy.vocabulary.condition
   module:
@@ -19,6 +20,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_alternative_names:
+    weight: 2
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_medical_specialties_ref:
     weight: 1
     label: above
