--- a/config/sites/default/field.field.node.location.field_location_region_ref.yml
+++ b/config/sites/default/field.field.node.location.field_location_region_ref.yml
@@ -11,7 +11,7 @@ field_name: field_location_region_ref
 entity_type: node
 bundle: location
 label: Region
-description: ''
+description: 'Select the region for this location.'
 required: false
 translatable: false
 default_value: {  }
