--- a/config/sites/default/system.site.yml
+++ b/config/sites/default/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 0774d598-2f66-4aaa-a3b1-625135d9221e
-name: towerhealth
+name: 'Tower Health'
 mail: admin@example.com
-slogan: ''
+slogan: 'Advancing Health. Transforming Lives.'
 page:
   403: ''
   404: ''
