--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - node.type.location
   module:
     - address
+    - office_hours
     - path
     - telephone
     - text
@@ -26,7 +27,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_body:
-    weight: 11
+    weight: 9
     settings:
       rows: 5
       placeholder: ''
@@ -34,34 +35,29 @@ content:
     type: text_textarea
     region: content
   field_location_address:
-    weight: 26
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
   field_location_hours:
-    weight: 9
-    settings:
-      rows: 5
-      placeholder: ''
+    weight: 11
+    settings: {  }
     third_party_settings: {  }
-    type: string_textarea
+    type: office_hours_list
     region: content
   field_location_phone_number:
-    weight: 8
+    weight: 7
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
     region: content
   field_location_region_ref:
-    weight: 10
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 8
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   path:
     type: path
