--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -19,7 +19,9 @@ dependencies:
     - field.field.node.profile.field_program_ref
     - field.field.node.profile.field_services_ref
     - node.type.profile
+    - workflows.workflow.default
   module:
+    - content_moderation
     - field_group
     - media_library
     - paragraphs
@@ -212,6 +214,12 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 11
