--- a/config/sites/default/core.entity_form_display.node.program.default.yml
+++ b/config/sites/default/core.entity_form_display.node.program.default.yml
@@ -9,7 +9,9 @@ dependencies:
     - field.field.node.program.field_program_type_ref
     - field.field.node.program.field_services_ref
     - node.type.program
+    - workflows.workflow.default
   module:
+    - content_moderation
     - path
     - text
 id: node.program.default
@@ -25,12 +27,9 @@ content:
     third_party_settings: {  }
   field_area_of_care_ref:
     weight: 7
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_body:
     weight: 9
@@ -51,12 +50,9 @@ content:
     region: content
   field_program_type_ref:
     weight: 8
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_services_ref:
     weight: 11
@@ -67,6 +63,12 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 5
