--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -6,7 +6,9 @@ dependencies:
     - field.field.node.service.field_area_of_care_ref
     - field.field.node.service.field_body
     - node.type.service
+    - workflows.workflow.default
   module:
+    - content_moderation
     - path
     - text
 id: node.service.default
@@ -22,12 +24,9 @@ content:
     third_party_settings: {  }
   field_area_of_care_ref:
     weight: 122
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_body:
     weight: 121
@@ -37,6 +36,12 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
