--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -11,6 +11,8 @@ dependencies:
     - node.type.location
   module:
     - address
+    - office_hours
+    - telephone
     - text
     - user
 id: node.location.default
@@ -18,9 +20,14 @@ targetEntityType: node
 bundle: location
 mode: default
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_body:
     weight: 102
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
@@ -33,18 +40,39 @@ content:
     type: address_default
     region: content
   field_location_hours:
-    weight: 105
+    weight: 108
     label: above
-    settings: {  }
+    settings:
+      day_format: long
+      time_format: G
+      compress: false
+      grouped: false
+      show_closed: all
+      closed_format: Closed
+      separator:
+        days: '<br />'
+        grouped_days: ' - '
+        day_hours: ': '
+        hours_hours: '-'
+        more_hours: ', '
+      current_status:
+        position: ''
+        open_text: 'Currently open!'
+        closed_text: 'Currently closed'
+      schema:
+        enabled: false
+      timezone_field: ''
+      office_hours_first_day: ''
     third_party_settings: {  }
-    type: basic_string
+    type: office_hours
     region: content
   field_location_phone_number:
     weight: 103
     label: above
-    settings: {  }
+    settings:
+      title: ''
     third_party_settings: {  }
-    type: basic_string
+    type: telephone_link
     region: content
   field_location_region_ref:
     weight: 106
@@ -56,7 +84,7 @@ content:
     region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
