--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -4,17 +4,35 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.location.field_body
+    - field.field.node.location.field_location_address
+    - field.field.node.location.field_location_hours
+    - field.field.node.location.field_location_phone_number
+    - field.field.node.location.field_location_region_ref
     - node.type.location
   module:
+    - address
     - user
 id: node.location.teaser
 targetEntityType: node
 bundle: location
 mode: teaser
 content:
-  links:
-    weight: 100
+  content_moderation_control:
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
+  field_location_address:
+    type: address_default
+    weight: 1
     region: content
-hidden: {  }
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+hidden:
+  field_body: true
+  field_location_hours: true
+  field_location_phone_number: true
+  field_location_region_ref: true
+  links: true
