--- a/config/sites/default/core.entity_view_display.node.profile.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.teaser.yml
@@ -4,17 +4,64 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.profile.field_body
+    - field.field.node.profile.field_email
+    - field.field.node.profile.field_gender
+    - field.field.node.profile.field_location_ref
+    - field.field.node.profile.field_medical_specialties_ref
+    - field.field.node.profile.field_profile_education
+    - field.field.node.profile.field_profile_first_name
+    - field.field.node.profile.field_profile_image
+    - field.field.node.profile.field_profile_last_name
+    - field.field.node.profile.field_profile_patients
+    - field.field.node.profile.field_profile_public_email
+    - field.field.node.profile.field_profile_referral
+    - field.field.node.profile.field_profile_status
+    - field.field.node.profile.field_program_ref
+    - field.field.node.profile.field_services_ref
+    - image.style.thumbnail
     - node.type.profile
   module:
+    - media
     - user
 id: node.profile.teaser
 targetEntityType: node
 bundle: profile
 mode: teaser
 content:
+  field_medical_specialties_ref:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_profile_image:
+    type: media_thumbnail
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      image_style: thumbnail
+      image_link: content
+    third_party_settings: {  }
   links:
-    weight: 100
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  field_body: true
+  field_email: true
+  field_gender: true
+  field_location_ref: true
+  field_profile_education: true
+  field_profile_first_name: true
+  field_profile_last_name: true
+  field_profile_patients: true
+  field_profile_public_email: true
+  field_profile_referral: true
+  field_profile_status: true
+  field_program_ref: true
+  field_services_ref: true
