--- a/config/sites/default/core.entity_view_display.node.program.default.yml
+++ b/config/sites/default/core.entity_view_display.node.program.default.yml
@@ -17,8 +17,13 @@ targetEntityType: node
 bundle: program
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_area_of_care_ref:
-    weight: 105
+    weight: 2
     label: above
     settings:
       link: true
@@ -26,30 +31,23 @@ content:
     type: entity_reference_label
     region: content
   field_body:
-    weight: 101
-    label: above
+    weight: 4
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_location_ref:
-    weight: 104
+    weight: 5
     label: above
     settings:
-      link: true
+      view_mode: teaser
+      link: false
     third_party_settings: {  }
-    type: entity_reference_label
+    type: entity_reference_entity_view
     region: content
   field_program_type_ref:
-    weight: 106
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_services_ref:
-    weight: 103
+    weight: 3
     label: above
     settings:
       link: true
@@ -57,8 +55,9 @@ content:
     type: entity_reference_label
     region: content
   links:
-    weight: 100
+    weight: 1
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  field_services_ref: true
