--- a/config/sites/default/core.entity_view_display.paragraph.education.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.education.default.yml
@@ -13,7 +13,7 @@ mode: default
 content:
   field_education_institution:
     weight: 1
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -21,7 +21,7 @@ content:
     region: content
   field_education_type:
     weight: 0
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
