--- a/config/sites/default/field.field.node.profile.field_profile_image.yml
+++ b/config/sites/default/field.field.node.profile.field_profile_image.yml
@@ -11,7 +11,7 @@ field_name: field_profile_image
 entity_type: node
 bundle: profile
 label: Image
-description: ''
+description: 'Upload or select an existing image of this doctor to display on their profile and in lists.'
 required: false
 translatable: false
 default_value: {  }
