--- a/config/sites/default/field.field.node.profile.field_program_ref.yml
+++ b/config/sites/default/field.field.node.profile.field_program_ref.yml
@@ -11,7 +11,7 @@ field_name: field_program_ref
 entity_type: node
 bundle: profile
 label: 'Institute, Center or Programs'
-description: ''
+description: 'Select the Institutes, Centers or Programs that this doctor is associated with.'
 required: false
 translatable: false
 default_value: {  }
