--- a/config/sites/default/field.field.node.service.field_area_of_care_ref.yml
+++ b/config/sites/default/field.field.node.service.field_area_of_care_ref.yml
@@ -11,7 +11,7 @@ field_name: field_area_of_care_ref
 entity_type: node
 bundle: service
 label: 'Areas of care'
-description: ''
+description: 'Select the area of care (service line) that for this service.'
 required: false
 translatable: true
 default_value: {  }
