--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/config_split": "^1.4",
         "drupal/core": "^8.0@stable",
         "drupal/devel": "^2.1",
+        "drupal/emulsify": "^3.1",
         "drupal/field_group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/office_hours": "^1.1",
