--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -8,6 +8,7 @@ module:
   breakpoint: 0
   ckeditor: 0
   color: 0
+  components: 0
   config: 0
   config_filter: 0
   config_split: 0
@@ -44,6 +45,7 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  unified_twig_ext: 0
   update: 0
   user: 0
   views_ui: 0
@@ -59,6 +61,8 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  tower_health: 0
+  emulsify: 0
 profile: config_installer
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
