--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - run:
           name: Install packages
-          command: sudo apt-get install -y libpng-dev mysql-client
+          command: sudo apt-get install -y libpng-dev default-mysql-client
       - run:
           name: Install nvm
           command: |
