--- a/docroot/themes/custom/tower_health/.stylelintrc
+++ b/docroot/themes/custom/tower_health/.stylelintrc
@@ -1,16 +1,11 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-    "at-rule-no-unknown": [ true, {
-      "ignoreAtRules": [
-        "include",
-        "mixin",
-        "extend",
-        "if",
-        "each",
-        "content"
-      ]
-    }],
-    "no-descending-specificity": null
+    "at-rule-no-unknown": null,
+    "no-descending-specificity": null,
+    "number-leading-zero": null,
+    "no-eol-whitespace": null,
+    "at-rule-empty-line-before": null,
+    "declaration-empty-line-before": null
   }
 }
