--- a/docroot/themes/custom/tower_health/.stylelintrc
+++ b/docroot/themes/custom/tower_health/.stylelintrc
@@ -6,6 +6,7 @@
     "number-leading-zero": null,
     "no-eol-whitespace": null,
     "at-rule-empty-line-before": null,
-    "declaration-empty-line-before": null
+    "declaration-empty-line-before": null,
+    "max-empty-lines": 2
   }
 }
