--- a/docroot/modules/custom/towerhealth_misc/towerhealth_misc.info.yml
+++ b/docroot/modules/custom/towerhealth_misc/towerhealth_misc.info.yml
@@ -1,5 +1,5 @@
 name: Tower Health Misc.
 type: module
 description: 'Miscellaneous custom module for Tower Health.'
-# core: 8.x
+core: 8.x
 package: Custom
