--- a/config/sites/default/core.entity_view_display.node.service.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.service.teaser.yml
@@ -12,9 +12,16 @@ targetEntityType: node
 bundle: service
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   links:
     weight: 100
     settings: {  }
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_area_of_care_ref: true
+  field_body: true
