--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,14 @@
     "require": {
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.5.0",
+        "drupal-pattern-lab/add-attributes-twig-extension": "^1.0",
+        "drupal-pattern-lab/attach-library-twig-extension": "^1.1",
+        "drupal-pattern-lab/bem-twig-extension": "^1.0",
+        "drupal-pattern-lab/unified-twig-extensions": "^0.1.0",
         "drupal/address": "^1.6",
         "drupal/admin_toolbar": "^1.26",
         "drupal/auto_entitylabel": "^2.1@beta",
+        "drupal/components": "^1.1",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
         "drupal/core": "^8.0@stable",
