--- a/config/sites/default/block.block.tower_health_footer.yml
+++ b/config/sites/default/block.block.tower_health_footer.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: 8zRjTNbfNAJ94lQpZDu6MkyD87GYJ2zpH9VQPVmRbcM
 id: tower_health_footer
 theme: tower_health
-region: header
-weight: 0
+region: footer
+weight: -8
 provider: null
 plugin: 'system_menu_block:footer'
 settings:
