Create custom module and view for autocomplete for search.

--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -2,18 +2,46 @@ uuid: 7673e9bd-f45e-46f5-aca7-b2f255b6da9a
 langcode: en
 status: true
 dependencies:
-  module:
-    - node
-    - search_api
-    - taxonomy
   config:
+    - field.storage.node.field_medical_specialties_ref
     - search_api.server.local_development
     - core.entity_view_mode.node.search_index
+  module:
+    - taxonomy
+    - node
+    - search_api
 id: towerhealth
 name: TowerHealth
 description: ''
 read_only: false
 field_settings:
+  field_medical_specialties_ref:
+    label: 'Medical Specialties'
+    datasource_id: 'entity:node'
+    property_path: field_medical_specialties_ref
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_medical_specialties_ref
+  medical_specialties_name:
+    label: 'Medical Specialties » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_medical_specialties_ref:entity:name'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_medical_specialties_ref
+      module:
+        - taxonomy
+        - taxonomy
+  name:
+    label: Name
+    datasource_id: 'entity:taxonomy_term'
+    property_path: name
+    type: text
+    dependencies:
+      module:
+        - taxonomy
   rendered_item:
     label: 'Rendered HTML output'
     property_path: rendered_item
@@ -40,6 +68,19 @@ field_settings:
     dependencies:
       module:
         - node
+  title_1:
+    label: 'Reverse reference: <em class="placeholder">Content</em> using <em class="placeholder">Medical Specialties</em> » Title'
+    datasource_id: 'entity:taxonomy_term'
+    property_path: 'search_api_reverse_entity_references_node__field_medical_specialties_ref:title'
+    type: text
+  vid:
+    label: Vocabulary
+    datasource_id: 'entity:taxonomy_term'
+    property_path: vid
+    type: string
+    dependencies:
+      module:
+        - taxonomy
 datasource_settings:
   'entity:node':
     bundles:
@@ -52,6 +93,7 @@ datasource_settings:
     bundles:
       default: true
       selected:
+        - areas_of_care
         - program_type
         - region
     languages:
@@ -60,7 +102,20 @@ datasource_settings:
 processor_settings:
   add_url: {  }
   aggregated_field: {  }
+  entity_status: {  }
+  ignorecase:
+    all_fields: false
+    fields:
+      - name
+      - rendered_item
+      - title
+      - title_1
+      - vid
+    weights:
+      preprocess_index: -20
+      preprocess_query: -20
   rendered_item: {  }
+  reverse_entity_references: {  }
 tracker_settings:
   default:
     indexing_order: fifo
