--- a/config/sites/default/views.view.auto_medical_specialty.yml
+++ b/config/sites/default/views.view.auto_medical_specialty.yml
@@ -1,4 +1,4 @@
-uuid: 6747efa1-c86a-4cd4-99d9-fd3363151b48
+uuid: 8c41b1a1-66be-498c-9fd5-b2de19191558
 langcode: en
 status: true
 dependencies:
@@ -6,8 +6,8 @@ dependencies:
     - search_api.index.towerhealth
   module:
     - search_api
-id: search
-label: Search
+id: auto_medical_specialty
+label: 'Autocomplete: Medical specialty'
 module: views
 description: ''
 tag: ''
@@ -36,7 +36,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Search
+          submit_button: Apply
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -44,17 +44,12 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: full
+        type: mini
         options:
           items_per_page: 10
           offset: 0
           id: 0
           total_pages: null
-          tags:
-            previous: ‹‹
-            next: ››
-            first: '« First'
-            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -63,30 +58,28 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          quantity: 9
+          tags:
+            previous: ‹‹
+            next: ››
       style:
         type: default
-      row:
-        type: search_api
         options:
-          view_modes:
-            'entity:node':
-              location: teaser
-              page: teaser
-              profile: teaser
-              program: teaser
-              service: teaser
-            'entity:taxonomy_term':
-              condition: default
-              medical_specialty: default
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          uses_fields: false
+      row:
+        type: fields
+        options:
+          inline: {  }
+          separator: ''
+          hide_empty: false
+          default_field_elements: true
       fields:
-        rendered_item:
-          table: search_api_index_towerhealth
-          field: rendered_item
-          id: rendered_item
-          entity_type: null
-          entity_field: null
-          plugin_id: search_api
+        name:
+          id: name
+          table: search_api_datasource_towerhealth_entity_taxonomy_term
+          field: name
           relationship: none
           group_type: group
           admin_label: ''
@@ -123,7 +116,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -131,11 +124,72 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          link_to_item: false
-          use_highlighting: false
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
           multi_type: separator
-          multi_separator: ', '
+          separator: ', '
+          field_api_classes: false
+          field_rendering: true
+          fallback_handler: search_api
+          fallback_options:
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
+          entity_type: taxonomy_term
+          plugin_id: search_api_field
       filters:
+        vid:
+          id: vid
+          table: search_api_index_towerhealth
+          field: vid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value:
+            min: ''
+            max: ''
+            value: medical_specialty
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_string
         search_api_fulltext:
           id: search_api_fulltext
           table: search_api_index_towerhealth
@@ -149,11 +203,11 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: Search
+            label: 'Fulltext search'
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: search_api_fulltext
+            identifier: name
             required: false
             remember: false
             multiple: false
@@ -177,51 +231,9 @@ display:
           parse_mode: terms
           min_length: null
           fields:
-            - medical_specialties_name
-            - rendered_item
-            - title
+            - name
           plugin_id: search_api_fulltext
-        search_api_datasource:
-          id: search_api_datasource
-          table: search_api_index_towerhealth
-          field: search_api_datasource
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value:
-            'entity:node': 'entity:node'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          plugin_id: search_api_datasource
       sorts: {  }
-      title: Search
       header: {  }
       footer: {  }
       empty: {  }
@@ -231,22 +243,7 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_interface'
-        - url
-        - url.query_args
-      tags: {  }
-  page_1:
-    display_plugin: page
-    id: page_1
-    display_title: Page
-    position: 1
-    display_options:
-      display_extenders: {  }
-      path: search
-      exposed_block: true
-    cache_metadata:
-      max-age: -1
-      contexts:
+        - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - url.query_args
