--- a/config/sites/default/views.view.auto_medical_specialty.yml
+++ b/config/sites/default/views.view.auto_medical_specialty.yml
@@ -71,10 +71,10 @@ display:
       row:
         type: fields
         options:
+          default_field_elements: true
           inline: {  }
           separator: ''
           hide_empty: false
-          default_field_elements: true
       fields:
         name:
           id: name
@@ -197,7 +197,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: and
+          operator: or
           value: ''
           group: 1
           exposed: true
@@ -228,7 +228,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: terms
+          parse_mode: direct
           min_length: null
           fields:
             - name
