--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/colors.yml
@@ -2,77 +2,77 @@ items:
   - name: $primary-dark
     value: '#003056'
   - name: $primary-light
-    value: '#4DA0D2'
+    value: '#4da0d2'
   - name: $healing
-    value: '#008A77'
+    value: '#008a77'
   - name: $healing-med
-    value: '#279A8B'
+    value: '#279a8b'
   - name: $healing-lt
-    value: '#6CADA3'
+    value: '#6cada3'
   - name: $healing-ltr
-    value: '#9BC3BD'
+    value: '#9bc3bd'
   - name: $healing-ltst
-    value: '#CBDFDA'
+    value: '#cbdfda'
   - name: $uplifting
-    value: '#E0C100'
+    value: '#e0c100'
   - name: $uplifting-med
-    value: '#E6CC49'
+    value: '#e6cc49'
   - name: $uplifting-lt
-    value: '#ECD879'
+    value: '#ecd879'
   - name: $uplifting-ltr
-    value: '#F2E5A3'
+    value: '#f2e5a3'
   - name: $uplifting-ltst
-    value: '#F8F1CE'
+    value: '#f8f1ce'
   - name: $trust
-    value: '#4D7BBE'
+    value: '#4d7bbe'
   - name: $trust-med
-    value: '#6F8FC9'
+    value: '#6f8fc9'
   - name: $trust-lt
-    value: '#8EA5D5'
+    value: '#8ea5d5'
   - name: $trust-ltr
-    value: '#B1BFE2'
+    value: '#b1bfe2'
   - name: $trust-ltst
-    value: '#D5DCF0'
+    value: '#d5dcf0'
   - name: $wisdom
-    value: '#8264AB'
+    value: '#8264ab'
   - name: $wisdom-med
-    value: '#967CB8'
+    value: '#967cb8'
   - name: $wisdom-lt
-    value: '#AB96C8'
+    value: '#ab96c8'
   - name: $wisdom-ltr
-    value: '#C2B6D9'
+    value: '#c2b6d9'
   - name: $wisdom-ltst
-    value: '#DED7EB'
+    value: '#ded7eb'
   - name: $growth
-    value: '#8DB750'
+    value: '#8db750'
   - name: $growth-med
-    value: '#A3C372'
+    value: '#a3c372'
   - name: $growth-lt
-    value: '#B8D092'
+    value: '#b8d092'
   - name: $growth-ltr
-    value: '#CEDEB3'
+    value: '#cedeb3'
   - name: $growth-ltst
-    value: '#E4EDD7'
+    value: '#e4edd7'
   - name: $tranquil
-    value: '#3FC1CB'
+    value: '#3fc1cb'
   - name: $tranquil-med
-    value: '#6FCCD4'
+    value: '#6fccd4'
   - name: $tranquil-lt
-    value: '#96D7DD'
+    value: '#96d7dd'
   - name: $tranquil-ltr
-    value: '#B9E3E9'
+    value: '#b9e3e9'
   - name: $tranquil-ltst
-    value: '#DBF0F4'
+    value: '#dbf0f4'
   - name: $energy
-    value: '#F47820'
+    value: '#f47820'
   - name: $energy-med
-    value: '#F69147'
+    value: '#f69147'
   - name: $energy-lt
-    value: '#FAAB70'
+    value: '#faab70'
   - name: $energy-ltr
-    value: '#FCC59A'
+    value: '#fcc59a'
   - name: $energy-ltst
-    value: '#FEE0C7'
+    value: '#fee0c7'
   - name: $neuro
     value: '#32863d'
   - name: $ortho
@@ -94,11 +94,11 @@ items:
   - name: $off-white
     value: '#f2f2f2'
   - name: $gray-lighter
-    value: '#BBBDC0'
+    value: '#bbbdc0'
   - name: $gray-light
     value: '#939597'
   - name: $gray
-    value: '#6D6E70'
+    value: '#6d6e70'
   - name: $gray-dark
     value: '#404041'
   - name: $black
