--- a/config/sites/default/views.view.auto_medical_specialty.yml
+++ b/config/sites/default/views.view.auto_medical_specialty.yml
@@ -228,7 +228,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: direct
+          parse_mode: terms
           min_length: null
           fields:
             - name
