Change search full text to find a doctor specific field.

--- a/config/sites/default/views.view.find_a_provider.yml
+++ b/config/sites/default/views.view.find_a_provider.yml
@@ -153,7 +153,7 @@ display:
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: search_api_fulltext
+            identifier: find_doctor_search
             required: false
             remember: false
             multiple: false
