--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
         "drupal/core": "^8.0@stable",
+        "drupal/default_content": "^1.0@alpha",
         "drupal/devel": "^2.1",
         "drupal/emulsify": "^3.1",
         "drupal/field_group": "^1.0",
