--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -16,6 +16,7 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  default_content: 0
   dynamic_page_cache: 0
   editor: 0
   entity_reference_revisions: 0
@@ -24,6 +25,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  hal: 0
   help: 0
   image: 0
   inline_entity_form: 0
@@ -40,6 +42,7 @@ module:
   rdf: 0
   search_api: 0
   search_api_solr: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
@@ -48,6 +51,7 @@ module:
   token: 0
   toolbar: 0
   towerhealth_autocomplete: 0
+  towerhealth_default_content: 0
   unified_twig_ext: 0
   update: 0
   user: 0
