--- a/config/sites/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.page.teaser.yml
@@ -14,7 +14,13 @@ targetEntityType: node
 bundle: page
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   links:
     weight: 101
     region: content
-hidden: {  }
+hidden:
+  search_api_excerpt: true
